<resources>
    <string name="app_name">Bitso Ticker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="template_format_money">$%s</string>
    <string name="mxn_btc">MXN/BTC</string>
    <string name="high_indicator">high indicator</string>
    <string name="low_indicator">low indicator</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
    <string name="mxn_eth">MXN/ETH</string>
    <string name="template_format_date">%1$s/%2$s/%3$s</string>
    <string name="error_no_data">Something was wrong please don\'t sell your coins :(</string>
    <string name="coin_transition_name">txtTransitionCryptoCoin</string>
    <string name="currency_transition_name">txtTransitionCurrency</string>
    <string name="price_transition_name">txtTransitionPrice</string>
    <string name="viewbg_transition_name">viewTransitionBg</string>
    <string name="card_chart_transition_name">cardChartInfoTransitionName</string>
    <string name="low_price">lowPriceCurrency</string>
    <string name="max_price">maxPriceCurrency</string>
    <string name="loading_message">Loading...</string>
    <string name="reload_chart">Touch to reload the chart</string>
    <string name="ask_price">askprice</string>
    <string name="bid_price">bidprice</string>
    <string name="apppreferences">com.chilangolabs.bitsopriceticker.preferences</string>
</resources>
