<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorCoin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarCoin"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarCoin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <View
                android:id="@+id/viewBgGradient"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginTop="-30dp"
                android:transitionName="@string/viewbg_transition_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/txtCoinCurrencyCrypto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/txtCoinValue"
                    android:layout_alignStart="@+id/txtCoinValue"
                    android:layout_marginBottom="-10dp"
                    android:text="BTC"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:transitionName="@string/coin_transition_name" />

                <TextView
                    android:id="@+id/txtCoinCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/txtCoinCurrencyCrypto"
                    android:layout_alignBottom="@+id/txtCoinCurrencyCrypto"
                    android:layout_toEndOf="@+id/txtCoinCurrencyCrypto"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:transitionName="@string/currency_transition_name"
                    tools:text="MXN" />

                <TextView
                    android:id="@+id/txtCoinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="25dp"
                    android:text="42000"
                    android:textColor="@android:color/white"
                    android:textSize="52sp"
                    android:transitionName="@string/price_transition_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="75dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtCoinMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="$4200"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtCoinMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="$4400"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|snap" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/coin_content" />

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>